# pseudocompiler

./: Cargo.toml  README.md  index-1521ea88d50851d8.js  index-1521ea88d50851d8_bg.wasm  index-2ffb4e4df3d4841b.js  index-2ffb4e4df3d4841b_bg.wasm  index-391844d2f11efad0.js  index-391844d2f11efad0_bg.wasm  index-8b92841465fcbbcd.js  index-8b92841465fcbbcd_bg.wasm  index-a217a4111a9b615.js  index-a217a4111a9b615_bg.wasm  index-fe56e2d9338dc29.js  index-fe56e2d9338dc29_bg.wasm  index-ff9507ffe7cf08b1.css  index.html
.github/workflows/: test.yml  website.yml
compiler/: Cargo.toml
compiler/fuzz/: Cargo.toml
compiler/fuzz/fuzz_targets/: parser.rs
compiler/src/: lib.rs  utils.rs
compiler/src/infer/: mod.rs  test.rs
compiler/src/js_codegen/: mod.rs
compiler/src/lexer/: mod.rs  test.rs
compiler/src/parser/: mod.rs  test.rs
compiler/src/solver/: mod.rs
compiler/src/transformer/: mod.rs  var_to_u32.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs
js_stdlib/: lib.js
playground/: Cargo.toml  index.html
playground/sass/: index.scss
playground/src/: app.rs
snippets/monaco-0bb2f9b3eaedb912/js/: editor.js
src/: main.rs
src/js_codegen/: mod.rs
src/lexer/: mod.rs  test.rs
src/parser/: mod.rs  test.rs
src/solver/: mod.rs  prolog.rs
src/tests/: mod.rs
web-client/src/: app.rs  main.rs
