[package]
name = "pseudocompiler"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1"
arbitrary = { version = "0.4", features = ["derive"] }
libfuzzer-sys = "0.3.0"
