[package]
name = "web-client"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.4"
monaco = { git="https://github.com/siku2/rust-monaco/", features = ["yew-components"] }
compiler = { path="../compiler" }
js-sys = "0.3.45"
